syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.api";

import "ci/proto/storage/main_stream_messages.proto";
import "ci/proto/storage/check.proto";

service StorageProxyApiService {
  // Прокси для записи сообщений в Logbroker.
  // Сообщения передаются в proto формате для валидации, но запись в Logbroker выполняется так, как это делает TE

  // Мы не можем писать в LB из SB задачи из-за отсутствия доступа:
  //  * Large тесты запускаются под роботами пользователей, у которых нет доступа в наш LB
  //  * Мы не сможем безопасно пробрасывать свой токен для записи в такие задачи
  rpc WriteMessages (WriteMessagesRequest) returns (WriteMessagesResponse);
}

message WriteMessagesRequest {
  CheckType check_type = 1;
  repeated MainStreamMessage messages = 3;
}

message WriteMessagesResponse {
}
